--- a/semantic-elements/index.html
+++ b/semantic-elements/index.html
@@ -13,7 +13,10 @@
     </header>
     <p> <u>Objective:</u> Create a site using 15 semantic elements that we learned from the slides and readings. Here's hoping I've done it correctly.</p>
     <main>
-      <h3>About Me</h3>
+      <h3><strong>Summary</strong></h3>
+      <p>HTML5 semantic elements are elements with a meaning. These elements are used to clearly describe and define the different parts of a web page to the browser being used and the developers using them. Semantics are primarily used to help technologies read and interpret your webpage, help computers make sense of the content you have created, help other programmers understand the structure of your webpages, and for easier use internationally since English is not widely spoken around the world. Some of the main semantic tags that one should know for document outlines include, but are not limited to: header, nav, aside, section, article, footer, etc.. Each semantic element has its purpose and place in a web page, but at the end of the day, they are all used to organize the content that one is trying to convey, ultimately allowing for a more efficient way to share and reuse data.</p>
+      <h3>And now for the random things...</h3>
+      <h4>About Me</h4>
       <p>Let's Play Two Truths and a Lie</p>
         <ol>
           <li>The closest I've ever come to flying was when I had a longboarding accident going down a small hill where I ditched my board and ate pavement.</li>
