moved files and organized folder

--- a/index.html
+++ b/index.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
-    <title>My Better Site</title>
+    <title>My Other Super Site</title>
   </head>
 
   <body>
     <header>
-    <h1>My Super Site</h1>
+      <h1>HTML5 Semantic Elements</h1>
+      <h2>Lesson 01 Assignment</h2>
     </header>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    <ol>
-      <li>Lil Bub</li>
-      <li>Heathcliff</li>
-      <li>That cat that jumps in boxes</li>
-    </ol>
-
+    <p> <u>Objective:</u> Create a site using 15 semantic elements that we learned from the slides and readings. Here's hoping I've done it correctly.</p>
+    <main>
+      <h3><strong>Summary</strong></h3>
+      <p>HTML5 semantic elements are elements with a meaning. These elements are used to clearly describe and define the different parts of a web page to the browser being used and the developers using them. Semantics are primarily used to help technologies read and interpret your webpage, help computers make sense of the content you have created, help other programmers understand the structure of your webpages, and for easier use internationally since English is not widely spoken around the world. Some of the main semantic tags that one should know for document outlines include, but are not limited to: header, nav, aside, section, article, footer, etc.. Each semantic element has its purpose and place in a web page, but at the end of the day, they are all used to organize the content that one is trying to convey, ultimately allowing for a more efficient way to share and reuse data.</p>
+      <h3>And now for the random things...</h3>
+      <h4>About Me</h4>
+      <p>Let's Play Two Truths and a Lie</p>
+        <ol>
+          <li>The closest I've ever come to flying was when I had a longboarding accident going down a small hill where I ditched my board and ate pavement.</li>
+          <li>I walked out of school in second grade because I was the new kid who didn't speak English and no one understood me. The culture shock made me do it.</li>
+          <li>The love of my life is my precious Goldendoodle named Odd.</li>
+        </ol>
+      <p>Which is the lie?</p>
+      <h4>A Few of My Favorite Things</h4>
+        <ul>
+          <li> <b>Doe:</b> A deer, a female deer</li>
+          <li> <b>Ray:</b> A drop of golden sun</li>
+          <li> <b>Me:</b> A name I call myself</li>
+          <li> <b>Far:</b> A long, long way to run</li>
+        </ul>
+      <h4>Here's a nice quote to end on:</h4>
+        <blockquote>"I've learned that people will forget what you said, people will forget what you did, but people will never forget how you made them feel." - <i>Maya Angelou</i></blockquote>
     <footer>
-    <ul>
-      <li>pencils</li>
-      <li>pens</li>
-      <li>pie charts</li>
-      </ul>
-      </footer>
-
+      <address> <mark>Contact Info:</mark> </address>
+        <ul>
+          <li>Phone: 123-456-7899</li>
+          <li>Email: asdfghjkl@gmail.com</li>
+          <li>Address: 123 Apple St, Tacoma, WA 98433</li>
+        </ul>
+    </footer>
+    </main>
   </body>
 
 </html>
